<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_maingrid"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ingredientsandsteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>