<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_maingrid"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipesname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_errormsg"
            android:visibility="invisible"
            style="@style/ErrorMessage"
            android:text="@string/errormsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


</LinearLayout>


