<resources>
    <string name="app_name">BakingApp</string>

    <string name="errormsg">"There was a problem pulling the recipes. \n\nPlease make sure you are connected to the internet."</string>
    <string name="baseURL">"https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/"</string>

    <string name="RecipeIngredientChooserText">"Recipe Ingredients"</string>
    <string name="RecipeStepChooserText">": Recipe Step Description"</string>

    <string name="IngredientName">Ingredient: %1$s</string>
    <string name="IngredientQuantity">Quantity: %1$s</string>
    <string name="IngredientMeasure">Measure: %1$s</string>

    <string name="btnPrevious_Text">Previous</string>
    <string name="btnNext_Text">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="empty_view_text">The ingredients could not be fetched</string>
    <string name="choose_preferred_recipe">Choose your favorite recipe</string>

    <string name="preference_file_key">com.example.aniru.bakingapp.PREFERENCE_FILE_KEY</string>
    <string name="preferredReicpe" />
    <string name="not_found">Preferred recipe not found</string>
</resources>
